Update project structure and enhance API functionality
- Updated `docker-compose.yml` to version '3.9' and added an `adminer` service for database management.
- Modified migration commands in `INSTRUCTIONS.md` for clarity.
- Enhanced logging in `ProductsController.cs` with static logger message templates.
- Updated `Dockerfile` to use .NET 9.0 and switched to root user for curl installation.
- Added `Microsoft.Extensions.ApiDescription.Server` package to `ProductManagement.API.csproj` for OpenAPI support.
- Introduced new OpenAPI specifications in `ProductManagement.API.json` and `ProductManagement.API_internal.json`.
- Updated Swagger UI configuration in `Program.cs` to include a new API reference endpoint.
- Added validation annotations in `ProductDto.cs` for required properties.
- Changed `AddProduct` return type in `IProductService.cs` from `void` to `int`.
- Implemented logging in `ProductService.cs` and updated method signatures.
- Created base and product configurations in `BaseConfiguration.cs` and `ProductConfiguration.cs`.
- Encapsulated properties in `BaseEntity.cs` and `Product.cs`, adding validation logic.
- Cleaned up `IGenericRepository.cs` by removing unnecessary using directives.
- Updated `ProductContext.cs` to apply configurations and include async seeding logic.
- Modified migration files to reflect schema changes in the `Products` table.
- Simplified constructor in `ApiIntegrationTest.cs` for better integration testing.
- Upgraded test project dependencies in `ProductManagement.Test.csproj`.

--- a/src/ProductManagement.API/Dockerfile
+++ b/src/ProductManagement.API/Dockerfile
@@ -1,29 +1,37 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Stage 1: Base
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
+# Switch to root to install curl and create a user
+# since mcr.microsoft.com/dotnet/aspnet:9.0 might be using a non-root user by default
+USER root
+RUN apt-get update && apt-get install -y curl
 
-# This stage is used to build the service project
+# Create a non-root user
+ARG APP_UID=1000
+RUN useradd -m -u $APP_UID appuser
+
+# Switch to the new non-root user
+USER appuser
+
+# Stage 2: Build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+# Copy only the API project file from the src folder.
 COPY ["ProductManagement.API/ProductManagement.API.csproj", "ProductManagement.API/"]
-RUN dotnet restore "./ProductManagement.API/ProductManagement.API.csproj"
+# Copy the rest of the solution files so that referenced projects are available.
 COPY . .
-WORKDIR "/src/ProductManagement.API"
-RUN dotnet build "./ProductManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet restore "ProductManagement.API/ProductManagement.API.csproj"
+RUN dotnet build "ProductManagement.API/ProductManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Stage 3: Publish
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ProductManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "ProductManagement.API/ProductManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Stage 4: Final
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
