--- a/src/ProductManagement.API/ProductManagement.API.csproj
+++ b/src/ProductManagement.API/ProductManagement.API.csproj
@@ -14,7 +14,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.1" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.17" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0" />
   </ItemGroup>
 
@@ -23,6 +28,11 @@
 		<ProjectReference Include="..\ProductManagement.App\ProductManagement.App.csproj" />
 		<ProjectReference Include="..\ProductManagement.Infra\ProductManagement.Infra.csproj" />
 	</ItemGroup>
+
+	<PropertyGroup>
+		<OpenApiDocumentsDirectory>$(MSBuildProjectDirectory)</OpenApiDocumentsDirectory>
+		<OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
+	</PropertyGroup>
 
 	<PropertyGroup>
 		<Authors>Mohammed</Authors>
