--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -24,6 +24,7 @@ csharp_prefer_static_local_function = true:suggestion
 csharp_style_conditional_delegate_call = true:suggestion
 csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
 dotnet_diagnostic.CA1515.severity = suggestion
+dotnet_diagnostic.xUnit1030.severity = suggestion
 
 [*.{cs,vb}]
 #### Naming styles ####
@@ -77,3 +78,5 @@ tab_width = 4
 indent_size = 4
 end_of_line = crlf
 dotnet_style_predefined_type_for_locals_parameters_members = true:silent
+dotnet_diagnostic.CA2007.severity = suggestion
+dotnet_diagnostic.CA2261.severity = suggestion
