--- a/src/ProductManagement.API/ProductManagement.API.csproj
+++ b/src/ProductManagement.API/ProductManagement.API.csproj
@@ -29,6 +29,10 @@
 		<ProjectReference Include="..\ProductManagement.Infra\ProductManagement.Infra.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Middlewares\" />
+	</ItemGroup>
+
 	<PropertyGroup>
 		<OpenApiDocumentsDirectory>$(MSBuildProjectDirectory)</OpenApiDocumentsDirectory>
 		<OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
