--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,21 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: yourusername
+          POSTGRES_PASSWORD: yourpassword
+          POSTGRES_DB: ProductManagementDb
+        ports:
+          - 5432:5432
+        # A health check for Postgres (adjust as necessary):
+        options: >-
+          --health-cmd "pg_isready -U yourusername" 
+          --health-interval 10s 
+          --health-timeout 5s 
+          --health-retries 5
 
     env:
       SOLUTION_FILE: src/ProductManagement.sln
