Add PostgreSQL connection string to CI environment
Added the environment variable `ConnectionStrings__DefaultConnection` to the `env` section in `ci.yml` to specify the connection string for a PostgreSQL database. This enables the application to connect to the database using the provided credentials, while retaining the existing `DOTNET_CLI_TELEMETRY_OPTOUT` variable.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,8 @@ jobs:
         sudo apt-get install -y jq        
         dotnet test ${{ env.SOLUTION_FILE }} --no-restore --verbosity normal --logger trx --collect "Code Coverage;Format=cobertura" --results-directory ./TestResults
       env:
-        DOTNET_CLI_TELEMETRY_OPTOUT: 1      
+        DOTNET_CLI_TELEMETRY_OPTOUT: 1   
+        ConnectionStrings__DefaultConnection: "Host=localhost;Port=5432;Database=ProductManagementDb;Username=yourusername;Password=yourpassword"
 
     # - name: List test results directory
     #   run: ls -R ./TestResults    
