Update EF Core migration command paths
Updated the `dotnet ef database update` command to use full relative paths for the project files, ensuring correct targeting of `ProductManagement.Infra` and `ProductManagement.API` in the source directory structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
       run: dotnet tool install -g dotnet-ef
 
     - name: Apply Migrations
-      run: dotnet ef database update --project ProductManagement.Infra --startup-project ProductManagement.API       
+      run: dotnet ef database update --project src/ProductManagement.Infra/ProductManagement.Infra.csproj --startup-project src/ProductManagement.API/ProductManagement.API.csproj   
 
     - name: Run tests with coverage
       run: |
