--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       POSTGRES_USER: yourusername
       POSTGRES_PASSWORD: yourpassword
       POSTGRES_DB: ProductManagementDb
-      ConnectionStrings__DefaultConnection: "Host=localhost;Port=5432;Database=${{ env.POSTGRES_DB }};Username=${{ env.POSTGRES_USER }};Password=${{ env.POSTGRES_PASSWORD }}"
+      ConnectionStrings__DefaultConnection: "Host=localhost;Port=5432;Database=ProductManagementDb;Username=yourusername;Password=yourpassword"
       SOLUTION_FILE: src/ProductManagement.sln
       CODE_COVERAGE_THRESHOLD: 50
     services:
