Update Postgres health check username
Changed the health check command to use a hardcoded username `yourusername` instead of the environment variable `${{ env.POSTGRES_USER }}`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           - 5432:5432
         # A health check for Postgres (adjust as necessary):
         options: >-
-          --health-cmd "pg_isready -U ${{ env.POSTGRES_USER }}" 
+          --health-cmd "pg_isready -U yourusername" 
           --health-interval 10s 
           --health-timeout 5s 
           --health-retries 5
